--- a/index.html
+++ b/index.html
@@ -2,14 +2,29 @@
 <html>
     <head>
         <title>TC</title>
-
+        <meta charset="utf-8">
     </head>
     <body>
-        <canvas height='480' width='640' id='thermalCanvas'>Обновите браузер</canvas>
-        <input type="file" id="fileinput" />  
-        <button onclick="saveThermalCanvasAsImage();">save</button>
+        <div class="container">
+            <div class="row">
+                <div class="span7">
+                    <canvas height='480' width='640' id='thermalCanvas' class="thumbnail">Обновите браузер</canvas>
+                </div>
+                <div class="well span3 pull-right">
+                    <input type="file" id="fileinput" />                    
+                    Under cursor: <span style="font-size: 20px;" id="temperatureUnderCursor"></span>&deg;<br>
+                    
+                    Min.temperature: <span id="minT"></span>&deg;<br>
+                    Max.temperature: <span id="maxT"></span>&deg;<br><br>
+                    <button onclick="saveThermalCanvasAsImage();" class="btn btn-primary">Save image</button>
+                </div>
+            </div>        
+        </div>
     </body>
-    <script src='/jquery1.8.min.js'></script>
+    <script src='/design/jquery1.8.min.js'></script>
     <script src='/gradientMap.js'></script>
     <script src='/main.js'></script>
+    <link type="text/css" href="/design/bootstrap.css" rel="stylesheet">
+    <link type="text/css" href="/design/bootstrap-responsive.css" rel="stylesheet">   
+    <script src='/design/bootstrap.js'></script>
 </html>
