--- a/index.html
+++ b/index.html
@@ -12,19 +12,29 @@
                 </div>
                 <div class="well span3 pull-right">
                     <input type="file" id="fileinput" />                    
-                    Under cursor: <span style="font-size: 20px;" id="temperatureUnderCursor"></span>&deg;<br>
-                    
-                    Min.temperature: <span id="minT"></span>&deg;<br>
-                    Max.temperature: <span id="maxT"></span>&deg;<br><br>
+                    Under cursor: <span style="font-size: 20px;" id="temperatureUnderCursor"></span>&deg;<br><br>
+                    <div>
+                        <span class="pull-left">Min <span id="minT"></span>&deg;</span>
+                        <span class="pull-right">Max <span id="maxT"></span>&deg;</span>
+                        <div class="clearfix"></div>
+                        <div id="slider-range-MinMaxT"></div>
+                    </div>
+                    <br><br>
+
                     <button onclick="saveThermalCanvasAsImage();" class="btn btn-primary">Save image</button>
                 </div>
             </div>        
         </div>
     </body>
-    <script src='/design/jquery1.8.min.js'></script>
+    <script src='/design/jquery-1.9.1.js'></script>
     <script src='/gradientMap.js'></script>
     <script src='/main.js'></script>
     <link type="text/css" href="/design/bootstrap.css" rel="stylesheet">
     <link type="text/css" href="/design/bootstrap-responsive.css" rel="stylesheet">   
     <script src='/design/bootstrap.js'></script>
+
+    <script src='/design/jquery-ui.js'></script>
+    <link type="text/css" href="/design/jquery-ui.css" rel="stylesheet">  
+
+
 </html>
