--- a/index.html
+++ b/index.html
@@ -11,17 +11,18 @@
                     <canvas height='480' width='640' id='thermalCanvas' class="thumbnail">Обновите браузер</canvas>
                 </div>
                 <div class="well span3 pull-right">
-                    <input type="file" id="fileinput" />                    
+                    <input type="file" id="fileinput" />           
+
                     Under cursor: <span style="font-size: 20px;" id="temperatureUnderCursor"></span>&deg;<br><br>
                     <div>
                         <span class="pull-left">Min <span id="minT"></span>&deg;</span>
                         <span class="pull-right">Max <span id="maxT"></span>&deg;</span>
-                        <div class="clearfix"></div>
-                        <div id="slider-range-MinMaxT"></div>
-                    </div>
-                    <br><br>
+                            <div class="clearfix"></div>
+                            <div id="slider-range-MinMaxT"></div>
+                        </div>
+                        <br><br>
 
-                    <button onclick="saveThermalCanvasAsImage();" class="btn btn-primary">Save image</button>
+                        <button onclick="saveThermalCanvasAsImage();" class="btn btn-primary">Save image</button>
                 </div>
             </div>        
         </div>
@@ -35,6 +36,30 @@
 
     <script src='/design/jquery-ui.js'></script>
     <link type="text/css" href="/design/jquery-ui.css" rel="stylesheet">  
+
+
+    <style>
+        #progress_bar {
+            margin: 10px 0;
+            padding: 3px;
+            border: 1px solid #000;
+            font-size: 14px;
+            clear: both;
+            opacity: 0;
+            -moz-transition: opacity 1s linear;
+            -o-transition: opacity 1s linear;
+            -webkit-transition: opacity 1s linear;
+        }
+        #progress_bar.loading {
+            opacity: 1.0;
+        }
+        #progress_bar .percent {
+            background-color: #99ccff;
+            height: auto;
+            width: 0;
+        }
+    </style>
+
 
 
 </html>
