cursor temperature tagging more precise

--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
             </div>        
         </div>
     </body>
-    <script src='/design/jquery-1.9.1.js'></script>
-    <script src='/gradientMap.js'></script>
-    <script src='/main.js'></script>
-    <link type="text/css" href="/design/bootstrap.css" rel="stylesheet">
-    <link type="text/css" href="/design/bootstrap-responsive.css" rel="stylesheet">   
+    <script src='design/jquery-1.9.1.js'></script>
+    <script src='gradientMap.js'></script>
+    <script src='main.js'></script>
+    <link type="text/css" href="design/bootstrap.css" rel="stylesheet">
+    <link type="text/css" href="design/bootstrap-responsive.css" rel="stylesheet">   
     <script src='/design/bootstrap.js'></script>
 
-    <script src='/design/jquery-ui.js'></script>
-    <link type="text/css" href="/design/jquery-ui.css" rel="stylesheet">  
+    <script src='design/jquery-ui.js'></script>
+    <link type="text/css" href="design/jquery-ui.css" rel="stylesheet">  
 
 
     <style>
